shifted backover to react due to signalling issues in sub components

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -23,9 +23,10 @@ html {
   border-radius: 0.5rem;
   font-family: Euclid Circular B Medium,sans-serif;
   font-size: 14px;
-  line-height: 18px;
   padding: 0.375rem 0.75rem;
   color: white;
+  font-size: 28px;
+  line-height: 36px;
 }
 
 .background {
@@ -37,5 +38,9 @@ html {
 }
 
 .confirmation {
+  color: white;
+}
+
+.loading {
   color: white;
 }
